# DetectAIText

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  checkData.ipynb  detectaitext-0.1.0-py3-none-any.whl  docker-compose.yml  model.py  model_and_datasets_link  pyproject.toml  training_logs_wandb
datasets/: llm_train_essays.pkl  tfidf_train_essays.csv
model/: model.safetensors
model/deberta-v3-base-finetuned/: config.json
notebooks/: baseline.ipynb  bert.ipynb  bert_base_uncased.ipynb  check_data.ipynb  check_tokenizers.ipynb  deberta_training.ipynb  lesson.ipynb  llm_dataset_concat.ipynb  own_model.ipynb  tf_idf_without_tokenize.ipynb  tfidf_datasets_concat.ipynb  wandb_check.ipynb
