[tool.poetry]
name = "detectaitext"
version = "0.1.0"
description = ""
authors = ["Victor Maslov <maslovvial04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
seaborn = "^0.13.2"
catboost = "^1.2.3"
scikit-learn = "^1.4.1.post1"
tokenizers = "^0.15.2"
tqdm = "^4.66.2"
datasets = "^2.18.0"
transformers = "^4.39.1"
lightgbm = "^4.3.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.10.1"
tensorflow-text = "2.10.0"
jupyter = "^1.0.0"
nltk = "^3.8.1"
razdel = "^0.5.0"
huggingface-hub = "^0.22.2"
torchvision = {version = "^0.17.2+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.2.2+cu118", source = "pytorch-gpu"}
torch = {version = "^2.2.2+cu118", source = "pytorch-gpu"}

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
