[tool.poetry]
name = "detectaitext"
version = "0.1.0"
description = ""
authors = ["Victor Maslov <maslovvial04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
tokenizers = "^0.15.2"
tqdm = "^4.66.2"
lightgbm = "^4.3.0"
torch = "^2.2.2"
transformers = "^4.39.3"
wandb = "^0.16.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
