[tool.poetry]
name = "DetectAIText"
version = "0.1.0"
description = ""
authors = ["Victor Maslov <maslovvial04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
onnxruntime = "^1.17.3"
torch = "^2.3.0"
pandas = "^2.2.2"
lightgbm = "^4.3.0"
tqdm = "^4.66.2"
transformers = "^4.40.1"
scikit-learn = "^1.4.2"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
